k8s/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: ClusterIP
